# librarian-press

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
configs/: model_130M.json  pretrain_130M.json  pretrain_dummy.json  run_dummy.json  sft_dummy.json  sft_qa_lora.json
src/librarian/: __init__.py
src/librarian/cli/: main.py
src/librarian/config/: paths.py
src/librarian/data/: __init__.py  dataset.py  ingest.py
src/librarian/evaluation/: perplexity.py
src/librarian/inference/: __init__.py  chat.py  load_model.py  sampler.py
src/librarian/model/: __init__.py  attention.py  lora.py  mlp.py
src/librarian/pipeline/: __init__.py  atomic_writer.py  orchestrator.py
src/librarian/tokenizer/: train.py
src/librarian/training/: optimizer.py
src/librarian/utils/: __init__.py
src/librarian_press/: __init__.py
src/librarian_press/cli/: main.py
src/librarian_press/config/: __init__.py  load.py  schema.py
src/librarian_press/data/: pack.py  prepare_sft.py  shard.py  tokenize.py
src/librarian_press/evaluation/: __init__.py  evaluator.py  generation.py
src/librarian_press/inference/: generate.py
src/librarian_press/metrics/: __init__.py  core.py  server.py
src/librarian_press/model/: block.py  build.py  gpt.py  rmsnorm.py  rope.py
src/librarian_press/pipeline/: cleanup.py  manifest.py  orchestrator.py  stages.py
src/librarian_press/serve/: __init__.py  chat.py  export.py  registry.py
src/librarian_press/tokenizer/: __init__.py  load.py
src/librarian_press/training/: __init__.py  checkpoint.py  scheduler.py  trainer.py
src/librarian_press/utils/: device.py  distributed.py  logging.py
tests/: _ddp_smoke.py
tests/fixtures/pretrain/: corpus.parquet  corpus.txt
tests/fixtures/sft/: train.jsonl  val.parquet
