[project]
name = "librarian"
version = "0.1.0"
description = "Config-driven framework to pretrain and fine-tune Librarian GPT models from local clean data"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.6",
    "numpy>=2.4.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "tensorboard>=2.20.0",
    "pyarrow>=17",
    "requests>=2.31",
]

[project.scripts]
librarian = "librarian.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian"]
