[project]
name = "librarian-press"
version = "0.1.0"
description = "Config-driven framework to pretrain and fine-tune Librarian-family GPT models from clean local data"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sujal Maheshwari" }]
maintainers = [{ name = "Sujal Maheshwari" }]
keywords = ["llm", "gpt", "pretraining", "fine-tuning", "lora", "transformer", "training-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6",
    "numpy>=2.4.2",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "tensorboard>=2.20.0",
    "pyarrow>=17",
    "requests>=2.31",
]

[project.scripts]
librarian-press = "librarian_press.cli.main:main"
lpress = "librarian_press.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian_press"]
